# mlops-bento-project-template

./: .gitignore  CLAUDE.md  DEPLOYMENT_MONITORING_GUIDE.md  GETTING_STARTED.md  MLOPS_COMPLETE_TUTORIAL.md  Makefile  POETRY_QUICKSTART.md  README.md  README_NEW_STRUCTURE.md  SYSTEM_DESIGN_RESTRUCTURE.md  TROUBLESHOOTING_GUIDE.md  dev_container_info.md  project_info.md  pyproject.toml  quick-start-sop.md  requirements.txt
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cicd.yml
application/inference/services/: README.md  bentofile.yaml  hello.py  iris_service.py  service.py  test_service.py  train.py
application/registry/model_registry/: .gitkeep  README.md  iris_classifier_20250915_222659.json  iris_classifier_20250915_223426.json  validation_report_20250915_234258.json
application/training/configs/: iris_config.json
application/training/pipelines/: iris_training_pipeline.py
application/validation/model_validation/: validate_model.py
docker-basics-example/: Dockerfile
domain/experiments/notebooks/: iris_experiment.ipynb
examples/quickstart/: .bentoignore  main.py  query.py
examples/quickstart/mylib/: calculator.py
infrastructure/cicd/github_actions/: cicd.yml  docker-image.yml  static.yml
infrastructure/deployment/containers/docker/: Dockerfile  repeat.sh
scripts/: quickstart.sh
scripts/automation/: full_mlops_pipeline.py  pipeline_config.json
scripts/setup/: setup.sh  setup_poetry.sh
shared/utils/common/: README.md  install-nvidia-container-toolkit.sh
shared/utils/gpu_utils/: verify_cuda_pytorch.py  verify_tf.py
tests/integration/: test_load_performance.py
tests/unit/: test_main.py
